[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/available_tech_display/available_tech_display.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/default.png" type="Texture" id=2]

[node name="AvailableTechDisplay" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
